# call-center-automation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
finetuned-LLM/: 06_inference_pipeline.py  README.md  finetune.ipynb  inference_pipeline.py  main.ipynb  main.py  pyproject.toml
finetuned-LLM/llama2-callcenter/checkpoint-200/: README.md  adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
finetuned-LLM/training scripts/: 01_data_preparation(final).ipynb  01_data_preparation.ipynb  02_sft_training (final)-2.ipynb  02_upload_to_hugginface.ipynb  03_dpo_training (2).ipynb  03_sft_training.ipynb  04_dpo_training.ipynb  04_evaluation (1).ipynb  05_evaluation.ipynb  upload to hugginface.ipynb
rag-multi-agent/: .gitattributes  README.md  app.py  ingestion.py  main.py  pyproject.toml  reset_db.py  retriever.py  test_crawl.py  visualize_graphs.py
rag-multi-agent/api/: main.py  schemas.py  session_api.py
rag-multi-agent/api/routes/: chat.py  feedback.py  handoff.py  health.py  ingestion.py  knowledge.py  tools_router.py
rag-multi-agent/scripts/: session_cleanup.py
rag-multi-agent/src/multiagent_rag/agents/: base_ingestor.py  confidence_agent.py  contextualizer.py  doc_ingestor.py  emotion_agent.py  finetuned_llm_agent.py  generator.py  guardrail.py  pdf_ingestor.py  query_decomposer.py  reranker.py  retriever.py  summarizer.py  tool_agent.py  url_ingestor.py
rag-multi-agent/src/multiagent_rag/graph/: ingestion_workflow.py  rag_router.py  rag_workflow.py  web_scraper_workflow.py
rag-multi-agent/src/multiagent_rag/state/: ingestion_state.py  rag_state.py  router_response_schema.py
rag-multi-agent/src/multiagent_rag/tools/: crm_tools.py  (+1 more)
rag-multi-agent/src/prompts/: contextualizer_prompt.txt  guardrail_prompt.txt  query_decomposer_prompt.txt  rag_prompt.txt  rag_router_prompt.txt  scraper_classifier_prompt.txt  summarizer_prompt.txt
rag-multi-agent/test/: test_agents_integration.py  test_generator.py  test_guardrail.py  test_intent_router.py  test_retriever_reranker.py  test_tool_agent.py
rag-multi-agent/test/testing_dataset/: Generator_Eval_Dataset.csv  Guardrail_Eval_Dataset.csv  IntentRouter_Eval_Dataset.csv  Retriever_Reranker_Eval_Dataset.csv  Tool_Agent_Eval_Dataset.csv
rag-multi-agent/tools/BM25/: bm25_params.json
rag-multi-agent/trails/: 01_data_ingestion_and_eda.ipynb  02_preprocessing_and_feature_engineering.ipynb  03_baseline_models.ipynb  04_rag_evaluation.ipynb  05_ablation_study.ipynb
rag-multi-agent/trails/outputs/: ablation_results.json  baseline_results.json  chunks_fixed.json  chunks_processed.json  chunks_sentence.json  corpus.json  qa_test_set.json  rag_results.json
(+73 files in other folders)
