[project]
name = "finetuned-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "babel>=2.17.0",
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.2",
    "ipywidgets>=8.1.8",
    "numpy>=2.3.5",
    "peft>=0.18.0",
    "sentencepiece>=0.2.1",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.57.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
default = true
