[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Multi-Agent-RAG"
version = "0.1.0"
description = "Multi-Agent RAG System for Telecom"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "langchain>=1.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "pdf2image>=1.17.0",
    "pinecone>=8.0.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
